<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name"> Oshan </string>
    <string name="last_name"> Maharjan </string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text"> I am a junior Computer Science major student at NKU. </string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Coding</string>
    <string name="profile_hobby_second_text">🥈 Basketball</string>
    <string name="profile_hobby_third_text">🥉 Swimming </string>
</resources>